# backend_absensi.rs

./: Cargo.toml  diesel.toml
migrations/2024-08-29-145206_create_classrooms/: down.sql  up.sql
migrations/2024-08-30-002802_create_users/: up.sql
src/: auth.rs  database.rs  errors.rs  main.rs  schema.rs  validate.rs
src/handlers/: auth.rs  classroom.rs  mod.rs  user.rs
src/middleware/: auth.rs
src/models/: classroom.rs  mod.rs  user.rs
